# CAVE-Onc-Benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
agent/: README.md  llm_verifier.py  orchestrator.py  table7.py  trace_explainer.py
audit/: README.md  store.py  trace_schema.py
bench/: README.md  heldout_mutations.py  injector.py  mutations.py  variant_injectors.py
cave_onc/: __init__.py  config.py
data/: MANIFEST.sha256  PROVENANCE.md
docs/: data_integrity_manifest.json  frozen_archetype_list.csv  item_core_p21_findings.md  item_e_ca012_findings.md  item_e_e1_findings.md  item_e_e2_findings.md  item_e_real_data_plan.md  item_gate2_findings.md  osf_preregistration.md  osf_project_readme.md  supplementary.md
eval/: README.md  core_p21_benchmark.json  expert_ratings_deidentified.csv  flag_schema.py  g3_scale_benchmark.json  heldout_results.json  llm_explanations.json  llm_integration_summary.json  llm_uncertainty_triage.json  llm_verification_results.json  maintainability.json  metrics.py  p21_fda_benchmark.json  p21_fda_new_issues.json  p8_benchmark_results.json  perf_benchmark.json  real_data_e1_ca012.json  real_data_e1_synta_hardened.json  real_data_e1_synta_n50.json  real_data_e2_ca012.json  real_data_e2_ca012_variant.json  real_data_e2_synta.json  robustness_sweep.json  run_baseline.py  scale_benchmark_large.json  single_pass_results.json  statistical_metrics.json  track_a_results.json  track_b_candidate_results.json  track_b_results.json
kg/: README.md  ontology.py  xpt_to_rdf.py
scripts/: audit_crosscheck.py  author_recist_shapes.py  build_data_manifest.py  build_gate_b_archetypes.py  build_rules_inventory.py  build_xref.py  classify_portability.py  compute_metrics.py  crosscheck.py  curate_shapes.py  expand_demorgan.py  explore_real_data.py  export_pharmaversesdtm.R  heldout_analysis.py  maintainability_analysis.py  p8_benchmark.py  (+19 more)
(+46 files in other folders)
