[project]
name = "cave-onc"
version = "0.1.0"
description = "Causal-Agentic Validation Engine for CDISC Oncology Submissions"
readme = "proposal.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Loose constraints; pinned after compat validation in Gate A.
dependencies = [
    # KG + SHACL (L1)
    # pyoxigraph pinned to 0.3.x to satisfy morph-kgc's transitive constraint
    # (morph-kgc 2.7-2.10 requires pyoxigraph<0.4). Reassess at T5.1.
    "pyoxigraph>=0.3,<0.4",
    "rdflib>=7.0",
    "morph-kgc>=2.7",
    # SHACL validator: Trav-SHACL (SDM-TIB) installed from git in Gate A;
    # pyshacl as a fallback / cross-check.
    "pyshacl>=0.26",
    # Causal layer (L2)
    "pgmpy>=0.1.25",
    "dowhy>=0.12",
    # Agent layer (L3)
    "langgraph>=0.2",
    "pydantic-ai>=0.0.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # CDISC IO
    "pyreadstat>=1.2",
    "pandas>=2.2",
    # Audit / utility
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
]
llm-hosted = [
    # OpenAI SDK is OpenAI-API-compatible; used for both DeepSeek V4 and Zhipu GLM
    # (set base_url + api_key per provider via .env).
    "openai>=1.40",
]
llm-local = [
    "vllm>=0.6 ; sys_platform == 'linux'",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.uv]
# uv resolves directly from PyPI; trav-shacl will be added as a git source in Gate A
# once we confirm the pinned commit hash compatible with our Oxigraph version.
